<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragments.DetailRecipeFragment">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/name"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headline"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/descr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_label" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/calories"
        app:layout_constraintEnd_toEndOf="@+id/descr"
        app:layout_constraintStart_toStartOf="@+id/descr"
        app:layout_constraintTop_toBottomOf="@+id/descr" />

    <TextView
        android:id="@+id/proteins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/proteins"
        app:layout_constraintEnd_toEndOf="@+id/calories"
        app:layout_constraintStart_toStartOf="@+id/calories"
        app:layout_constraintTop_toBottomOf="@+id/calories" />

    <TextView
        android:id="@+id/carbos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/carbos"
        app:layout_constraintEnd_toEndOf="@+id/proteins"
        app:layout_constraintStart_toStartOf="@+id/proteins"
        app:layout_constraintTop_toBottomOf="@+id/proteins" />

    <TextView
        android:id="@+id/fats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/fats"
        app:layout_constraintEnd_toEndOf="@+id/carbos"
        app:layout_constraintStart_toStartOf="@+id/carbos"
        app:layout_constraintTop_toBottomOf="@+id/carbos" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="@+id/fats"
        app:layout_constraintStart_toStartOf="@+id/fats"
        app:layout_constraintTop_toBottomOf="@+id/fats" />

    <RatingBar
        android:id="@+id/difficult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/difficult"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

</androidx.constraintlayout.widget.ConstraintLayout>